fixed image alignment

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,7 +1,15 @@
-html, body {
+
+html{
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    background: black;
+}
+
+body {
 	overflow: hidden;
 	width: 100vw;
-	height: 100vh;
 	margin: 0;
 	color: white;
 	font-family: Roboto;
@@ -101,7 +109,7 @@ button {
     left:0;
 
     width: 100%;
-    height: 100%;
+    /*height: 100%;*/
 
     z-index: 1000;
     display: none;
